[workspace]
members = [
    "crates/metrics",
    "crates/witness-generator",
    "xtask",
    # succinct
    "crates/zkevm-succinct/host",
    # zkm
    "crates/zkevm-zkm/host",
    # risc0
    "crates/zkevm-risc0/host",
    # openvm
    "crates/zkevm-openvm/host",
    # Guest programs
    "ere-guests/sp1",
    "ere-guests/risc0",
    "ere-guests/risc0/guest", #TODO: fix so we have one crate
    "ere-guests/openvm",
    "ere-guests/zkm",
    # Ere host crate
    "crates/ere-hosts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"


[workspace.dependencies]

# local dependencies
witness-generator = { path = "crates/witness-generator" }
zkevm-metrics = { path = "crates/metrics" }
benchmark-runner = { path = "crates/benchmark-runner" }

zkvm-interface = { git = "https://github.com/eth-applied-research-group/ere", package = "zkvm-interface" }
ere-sp1 = { git = "https://github.com/eth-applied-research-group/ere", package = "ere-sp1" }

# branch is kw/zkevm-benchmark-workload-repo
# NOTE: We are using a branch of a branch that has not yet been merged into master.
ef-tests = { git = "https://github.com/kevaundray/reth", rev = "177578a5927a0b3f9087a1588e3334dbc2dd3204" }
reth-ethereum-primitives = { git = "https://github.com/kevaundray/reth", rev = "177578a5927a0b3f9087a1588e3334dbc2dd3204" }
reth-primitives-traits = { git = "https://github.com/kevaundray/reth", rev = "177578a5927a0b3f9087a1588e3334dbc2dd3204" }
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "177578a5927a0b3f9087a1588e3334dbc2dd3204" }
reth-chainspec = { git = "https://github.com/kevaundray/reth", rev = "177578a5927a0b3f9087a1588e3334dbc2dd3204" }
alloy-genesis = { version = "1.0.3", default-features = false }

# alloy
alloy-primitives = { version = "1.0.0", default-features = false, features = [
    "map-foldhash",
    "serde",
    "sha3-keccak",
] }

# misc
bincode = "1.3"
serde = { version = "1.0", default-features = false }
walkdir = "2.3.3"
rayon = "1.7"
hex = "0.4.3"
thiserror = "2"
serde_json = "*"
serde_derive = "*"

[patch.crates-io]
