[package]
name = "zkevm-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde_derive.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
