[package]
name = "jolt-guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
    "guest-std",
] }

reth-stateless.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-primitives.workspace = true
