[package]
name = "openvm-guest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
    "std",
], tag = "v1.1.1" }

reth-stateless.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-primitives.workspace = true
tracing-subscriber = "*"
tracing = "*"

[lints]
workspace = true
