cargo-features = ["edition2024"]

[package]
name = "powdr-guest"
version = "0.1.0"
edition = "2024"

[dependencies]
powdr-riscv-syscalls = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3" }
powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr", tag = "v0.1.3", features = [
    "std",
] }

# Since we cannot put powdr in the workspace because of a TODO, we need to copy paste these here
reth-ethereum-primitives = { git = "https://github.com/kevaundray/reth", rev = "96de1f325d8835d589bd505b9f94507904f20963" }
reth-primitives-traits = { git = "https://github.com/kevaundray/reth", rev = "96de1f325d8835d589bd505b9f94507904f20963" }
reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "96de1f325d8835d589bd505b9f94507904f20963" }
