[package]
name = "succinct-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
witness-generator.workspace = true
zkevm-metrics.workspace = true
benchmark-runner.workspace = true
dotenv = "0.15.0"

ere-sp1.workspace = true
zkvm-interface.workspace = true

[lints]
workspace = true
