[package]
name = "risc0guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "^2.0.2", default-features = false, features = [
    'std',
] }
reth-stateless.workspace = true
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
alloy-primitives.workspace = true
