[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-genesis.workspace = true
alloy-primitives.workspace = true
c-kzg = { version = "=2.1.1", default-features = true }
reth-ethereum-primitives = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-primitives-traits = { workspace = true, features = [
    "serde",
    "serde-bincode-compat",
] }
reth-stateless.workspace = true
revm = { version = "23", features = ["std", "c-kzg", "blst", "bn"] }
risc0-zkvm = { version = "^2.0.2", default-features = false, features = [
    "std",
    "unstable",
] }
sha2 = "=0.10.8"
